// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the InputCheckbox component renders the same as last time 1`] = `
<div>
  <div
    class="wrapper"
    data-testid="wrapper"
  >
    <label
      class="label"
      for="This is a name"
    >
      This is a label
    </label>
    <div
      class="checkboxWrapper"
    >
      <input
        class="checkbox"
        data-testid="input"
        id="This is a name"
        name="This is a name"
        type="checkbox"
        value="false"
      />
      <label
        class="checkboxLabel"
        data-testid="toggle"
        for="This is a name"
      >
        <span
          class="checkboxButton"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`the InputText component renders the same as last time 1`] = `
<div>
  <div
    class="wrapper"
    data-testid="wrapper"
  >
    <label
      class="label"
      for="This is a name"
    >
      This is a label
    </label>
    <input
      class="text"
      data-testid="input-text"
      id="This is a name"
      name="This is a name"
      type="text"
      value="This is a value"
    />
  </div>
</div>
`;
